# ReCpp-filesystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  release.yml
examples/: CMakeLists.txt  main.cpp
include/recpp/filesystem/: FileSystem.h
resources/doxygen/: Doxyfile  index.md
src/: FileSystem.cpp
